# facebook_scraping

./: .gitignore  .uv  README.md  README_UI_SCRAPER.md  main.py  post_example.html  post_example.py  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: rule1.mdc
config/: __init__.py  config.py
database/: __init__.py  database.py  models.py
strategies/: __init__.py  base_scraper.py  facebook_scraper.py  google_scraper.py
utils/: __init__.py  chrome_driver_setup.py  chrome_process_manager.py  human_behavior.py
